tests/testcases/invalid/semantic/34_function_redefinition.ciel
// Error: redefinition of function
int add(int a, int b) {
    return a + b;
}

int add(int a, int b) {  // Error: redefinition
    return a + b + 1;
}

int main() {
    int x = add(1, 2);
    return 0;
}
